--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 *{
     margin: 0;
@@ -8,8 +8,8 @@
 body{
     height: 100vh;
     box-sizing: border-box;
-    background-color:#000000;
-    color: #f2eff5;
+    background-color: #000000;
+    color: #F6F6F6;
 }
 
 .titulo-destaque{
@@ -17,23 +17,25 @@ body{
 }
 
 .apresentacao{
-    margin: 10%;
+    margin: 10% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-
 .apresentacao__conteudo{
     width: 615px;
-    }
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
 
-.apresentacao__conteudo__titilo{
+.apresentacao__conteudo__titulo{
     font-size: 36px;
     font-family: 'Krona One', sans-serif;
 }
 
 .apresentacao__conteudo__texto{
-    font-size: 18px;
+    font-size: 24px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -42,10 +44,15 @@ body{
     justify-content: space-between;
 }
 
-.aporesentacao__links__link{
+.apresentacao__links__link{
     background-color: #22D4FD;
     width: 280px;
     text-align: center;
     border-radius: 16px;
-    size: 24px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: #000000;
+    font-family: 'Montserrat', sans-serif;
 }
