--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
 
 *{
     margin: 0;
@@ -6,10 +6,10 @@
 }
 
 body{
-    height: 100vh;
+    height: 75vh;
     box-sizing: border-box;
-    background-color: #000000;
-    color: #F6F6F6;
+    background-color:#000000;
+    color: #f2eff5;
 }
 
 .titulo-destaque{
@@ -17,17 +17,15 @@ body{
 }
 
 .apresentacao{
-    margin: 10% 15%;
+    padding: 5%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .apresentacao__conteudo{
     width: 615px;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-}
+    }
 
 .apresentacao__conteudo__titulo{
     font-size: 36px;
@@ -35,24 +33,52 @@ body{
 }
 
 .apresentacao__conteudo__texto{
-    font-size: 24px;
+    font-size: 28px;
     font-family: 'Montserrat', sans-serif;
 }
 
 .apresentacao__links{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    gap: 32px;
 }
 
-.apresentacao__links__link{
-    background-color: #22D4FD;
-    width: 280px;
+.apresentacao__links__subtitulo{
+    font-family: 'Krona One', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.apresentacao__links__link {
+    /* background-color: #22D4FD; */
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    border: 2px solid #22D4FD;
+    width: 378px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
     font-size: 24px;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #000000;
+    color: #F6F6F6;
     font-family: 'Montserrat', sans-serif;
+}
+
+.apresentacao__links__link:hover {
+    background-color: #272727;
+}
+
+.rodape{
+    color: #000000;
+    background-color: #22D4FD;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    padding: 24px;
+    text-align: center;
+    
 }
