--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 *{
     margin: 0;
@@ -6,34 +6,46 @@
 }
 
 body{
-    height: 75vh;
+    /* height: 100vh; */
     box-sizing: border-box;
-    background-color:#000000;
-    color: #f2eff5;
+    background-color: #000000;
+    color: #F6F6F6;
 }
-
 .titulo-destaque{
     color: #22D4FD;
 }
-
+.cabecalho{
+    padding: 2% 0% 0% 15%; 
+}
+.cabecalho__menu{
+    display: flex;
+    gap: 80px;
+}
+.cabecalho__menu__link{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #22D4FD;
+}
 .apresentacao{
-    padding: 5%;
+    padding: 2% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-
 .apresentacao__conteudo{
     width: 615px;
-    }
-
-.apresentacao__conteudo__titulo{
-    font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
+.apresentacao__conteudo__titulo{
+    font-size: 30px;
+    font-family: 'Krona One', sans-serif;
+}
 .apresentacao__conteudo__texto{
-    font-size: 28px;
+    font-size: 22px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -44,14 +56,12 @@ body{
     align-items: center;
     gap: 32px;
 }
-
 .apresentacao__links__subtitulo{
     font-family: 'Krona One', sans-serif;
     font-weight: 400;
     font-size: 20px;
 }
-
-.apresentacao__links__link {
+.apresentacao__links__link{
     /* background-color: #22D4FD; */
     display: flex;
     justify-content: center;
@@ -67,18 +77,15 @@ body{
     color: #F6F6F6;
     font-family: 'Montserrat', sans-serif;
 }
-
-.apresentacao__links__link:hover {
+.apresentacao__links__link:hover{
     background-color: #272727;
 }
-
 .rodape{
     color: #000000;
     background-color: #22D4FD;
+    padding: 24px;
+    text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     font-weight: 400;
-    padding: 24px;
-    text-align: center;
-    
 }
