--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root{
+    --color-background: #000000;
+    --color-text: #f6f6f6;
+    --color-emphasis: #22D4FD;
+    --color-hover: #272722;
+
+    --font-frist: 'Krona One', sans-serif;
+    --font-secund: 'Montserrat', sans-serif;
+}
 *{
     margin: 0;
     padding: 0;
 }
-
 body{
     /* height: 100vh; */
     box-sizing: border-box;
-    background-color: #000000;
-    color: #F6F6F6;
+    background-color: var(--color-background);
+    color: var(--color-text);
 }
 .titulo-destaque{
-    color: #22D4FD;
+    color: var(--color-emphasis);
 }
 .cabecalho{
     padding: 2% 0% 0% 15%; 
@@ -22,10 +30,10 @@ body{
     gap: 80px;
 }
 .cabecalho__menu__link{
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--font-secund);
     font-size: 24px;
     font-weight: 600;
-    color: #22D4FD;
+    color: var(--color-emphasis);
 }
 .apresentacao{
     padding: 2% 15%;
@@ -42,11 +50,11 @@ body{
 
 .apresentacao__conteudo__titulo{
     font-size: 30px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--font-frist);
 }
 .apresentacao__conteudo__texto{
     font-size: 18px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--font-secund);
 }
 
 .apresentacao__links{
@@ -57,7 +65,7 @@ body{
     gap: 32px;
 }
 .apresentacao__links__subtitulo{
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--font-frist);
     font-weight: 400;
     font-size: 20px;
 }
@@ -66,7 +74,7 @@ body{
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #22D4FD;
+    border: 2px solid var(--color-emphasis);
     width: 378px;
     text-align: center;
     border-radius: 8px;
@@ -74,18 +82,18 @@ body{
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #F6F6F6;
-    font-family: 'Montserrat', sans-serif;
+    color: var(--color-text);
+    font-family: var(--font-secund);
 }
 .apresentacao__links__link:hover{
-    background-color: #272727;
+    background-color: var(--color-hover);
 }
 .rodape{
-    color: #000000;
-    background-color: #22D4FD;
+    color: var(--color-background);
+    background-color: var(--color-emphasis);
     padding: 24px;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--font-secund);
     font-size: 24px;
     font-weight: 400;
 }
